--- a/homepanduaniklan5detik.html
+++ b/homepanduaniklan5detik.html
@@ -67,9 +67,7 @@
             <th colspan="2">2. Tun2TAP atau SocksDroid</th>
           </tr>
            <tr>
-              <td><strong><a
-                href="https://play.google.com/store/apps/details?id=com.newtoolsworks.tun2tap" target="_blank">Tun2TAP</a></strong> dan <strong><a
-                href="https://play.google.com/store/search?q=socksdroid&c=apps" target="_blank">SocksDroid</a></strong> digunakan untuk menghubungkan android kamu dengan jaringan Luar menggunakan IP Proxy Premium Gratis dari Aplikasi ini</td>
+              <td><strong><a>Tun2TAP</a></strong> dan <strong><a>SocksDroid</a></strong> digunakan untuk menghubungkan android kamu dengan jaringan Luar menggunakan IP Proxy Premium Gratis dari Aplikasi ini</td>
           </tr>
            <tr>
             <th colspan="2">3. Game</th>
