--- a/infogamegacor.html
+++ b/infogamegacor.html
@@ -12,28 +12,28 @@
         <div class="table-heading">Info Game Gacor</div>
        <table>
            <tr>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank">Block Puzzle Plus</a></td>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.link.jewelpopblast" target="_blank">Jewel Pop Blast</a></td>
+            <td style="text-align: center;"><a>Block Puzzle Plus</a></td>
+            <td style="text-align: center;"><a>Jewel Pop Blast</a></td>
          </tr>
          <tr>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.plus.block.puzzle.game" target="_blank"><img src="https://play-lh.googleusercontent.com/sD0zPUgVK9KlqYz9pcSpKAsOFpGK7gy9ubKY0T-5o--ZixsaVcFlciIfDPL32TLbcm8" style="max-width: 100%;"></a></td>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.link.jewelpopblast" target="_blank"><img src="https://play-lh.googleusercontent.com/yzE1UVZav-WPi65UiVxdpEbwWQPsrNSqYhnS3CDebAijUPMhPtyAohAaZev9fAiQR90" style="max-width: 100%;"></a></td>
+            <td style="text-align: center;"><a><img src="https://play-lh.googleusercontent.com/sD0zPUgVK9KlqYz9pcSpKAsOFpGK7gy9ubKY0T-5o--ZixsaVcFlciIfDPL32TLbcm8" style="max-width: 100%;"></a></td>
+            <td style="text-align: center;"><a><img src="https://play-lh.googleusercontent.com/yzE1UVZav-WPi65UiVxdpEbwWQPsrNSqYhnS3CDebAijUPMhPtyAohAaZev9fAiQR90" style="max-width: 100%;"></a></td>
          </tr>
           <tr>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.forest.match.fm3.game">Forest Match 3</a></td>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.three.animal.blast">Animals Blast</a></td>
+            <td style="text-align: center;"><a>Forest Match 3</a></td>
+            <td style="text-align: center;"><a>Animals Blast</a></td>
           </tr>
          <tr>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.forest.match.fm3.game" target="_blank"><img src="https://play-lh.googleusercontent.com/R-u0MwF4QdoRbnD9gCxW13qLcjm-WGCqPqnpk3IIjAz1pDy-rPgA7_jA8sxTDOZW4s4" style="max-width: 100%;"></a></td>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.three.animal.blast" target="_blank"><img src="https://play-lh.googleusercontent.com/5KCGqb5vSh2y2725y-mQOgxhk5YNC2W2HKxXfRTYS9HcjtLiBE77EXvteI8VMPXGlh8" style="max-width: 100%;"></a></td>
+            <td style="text-align: center;"><a><img src="https://play-lh.googleusercontent.com/R-u0MwF4QdoRbnD9gCxW13qLcjm-WGCqPqnpk3IIjAz1pDy-rPgA7_jA8sxTDOZW4s4" style="max-width: 100%;"></a></td>
+            <td style="text-align: center;"><a><img src="https://play-lh.googleusercontent.com/5KCGqb5vSh2y2725y-mQOgxhk5YNC2W2HKxXfRTYS9HcjtLiBE77EXvteI8VMPXGlh8" style="max-width: 100%;"></a></td>
          </tr>
          <tr>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.sushi.blast.game.r2">Sushi Blast</a></td>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.merge.v2.car.v2048v">2048 Merge Cars</a></td>
+            <td style="text-align: center;"><a>Sushi Blast</a></td>
+            <td style="text-align: center;"><a>2048 Merge Cars</a></td>
           </tr>
          <tr>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.sushi.blast.game.r2" target="_blank"><img src="https://play-lh.googleusercontent.com/WwIZ9JLeWGQFOO8yjzgz81bghIFUZ462Adrk-nB0qqzP_GMp81K11r3IdyZ1SrsUBw" style="max-width: 100%;"></a></td>
-            <td style="text-align: center;"><a href="https://play.google.com/store/apps/details?id=com.merge.v2.car.v2048v" target="_blank"><img src="https://play-lh.googleusercontent.com/aZKgCfsJetlRUupu8_Gvs_DRf1FGmZFwD2JWXQc98lFONlZN4LRuXBar7TOsfY3KWC-R" style="max-width: 100%;"></a></td>
+            <td style="text-align: center;"><a><img src="https://play-lh.googleusercontent.com/WwIZ9JLeWGQFOO8yjzgz81bghIFUZ462Adrk-nB0qqzP_GMp81K11r3IdyZ1SrsUBw" style="max-width: 100%;"></a></td>
+            <td style="text-align: center;"><a><img src="https://play-lh.googleusercontent.com/aZKgCfsJetlRUupu8_Gvs_DRf1FGmZFwD2JWXQc98lFONlZN4LRuXBar7TOsfY3KWC-R" style="max-width: 100%;"></a></td>
           </tr>
         </table>
     </div>
