--- a/cobaproxy.html
+++ b/cobaproxy.html
@@ -25,7 +25,7 @@
     </table>
 
     <!-- Hubungkan file JavaScript terpisah -->
-    <script src="script.js"></script>
+    <script src="scriptip.js"></script>
     <script>
         // Panggil fetchData saat halaman dimuat pertama kali
         document.addEventListener("DOMContentLoaded", function () {
