--- a/aaproxygratis.html
+++ b/aaproxygratis.html
@@ -26,7 +26,7 @@
     </table>
 
     <!-- Hubungkan file JavaScript terpisah -->
-    <script src="script.js"></script>
+    <script src="aascriptproxyjson.js"></script>
     <script>
         // Panggil fetchData saat halaman dimuat pertama kali
         document.addEventListener("DOMContentLoaded", function () {
