--- a/aaproxygratis.html
+++ b/aaproxygratis.html
@@ -57,6 +57,35 @@
         });
     </script>
     </div>
+    
+    <div class="table-container">
+        <div class="table-heading">Daftar IP Proxy Server Canada</div>
+       <table id="data-table">
+        <thead>
+            <tr>
+                <th>IP</th>
+                <th>HOST</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Data akan dimasukkan di sini -->
+        </tbody>
+    </table>
+
+    <!-- Hubungkan file JavaScript terpisah -->
+    <script src="aascriptproxyjson.js"></script>
+    <script>
+        // Panggil fetchData saat halaman dimuat pertama kali
+        document.addEventListener("DOMContentLoaded", function () {
+            fetchData("canada");
+        });
+
+        // Tambahkan event listener ke tombol "Segarkan Data"
+        document.getElementById("refresh-button").addEventListener("click", function () {
+            fetchData("canada");
+        });
+    </script>
+    </div>
     <div class="table-container">
         <div class="table-heading">#Gaskeun</div>
 </body>
