--- a/aaproxygratis.html
+++ b/aaproxygratis.html
@@ -48,44 +48,52 @@
     <script>
         // Panggil fetchData saat halaman dimuat pertama kali
         document.addEventListener("DOMContentLoaded", function () {
-            fetchData("united_states");
+            fetchData();
         });
 
         // Tambahkan event listener ke tombol "Segarkan Data"
         document.getElementById("refresh-button").addEventListener("click", function () {
-            fetchData("united_states");
+            fetchData();
         });
+
+        function fetchData() {
+    // Ganti URL sesuai dengan lokasi berkas JSON Anda
+    fetch("aadataproxyjson.json")
+        .then(response => response.json())
+        .then(data => {
+            const tableBody = document.querySelector("#data-table tbody");
+            tableBody.innerHTML = ""; // Mengosongkan tabel sebelum memasukkan data baru
+
+            // Loop melalui semua kategori
+            for (const category in data) {
+                if (data.hasOwnProperty(category)) {
+                    // Tambahkan baris keterangan kategori
+                    const categoryRow = document.createElement("tr");
+                    const categoryCell = document.createElement("td");
+                    categoryCell.colSpan = 2; // Mengambil seluruh lebar kolom
+                    categoryCell.textContent = `Kategori: ${category}`;
+                    categoryRow.appendChild(categoryCell);
+                    tableBody.appendChild(categoryRow);
+
+                    // Tambahkan data IP dan HOST untuk kategori ini
+                    data[category].forEach(item => {
+                        const row = document.createElement("tr");
+                        const ipCell = document.createElement("td");
+                        const hostCell = document.createElement("td");
+                        ipCell.textContent = item.IP;
+                        hostCell.textContent = item.HOST;
+                        row.appendChild(ipCell);
+                        row.appendChild(hostCell);
+                        tableBody.appendChild(row);
+                    });
+                }
+            }
+        })
+        .catch(error => console.error("Terjadi kesalahan:", error));
+}
     </script>
     </div>
     
-    <div class="table-container">
-        <div class="table-heading">Daftar IP Proxy Server Canada</div>
-       <table id="data-table">
-        <thead>
-            <tr>
-                <th>IP</th>
-                <th>HOST</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Data akan dimasukkan di sini -->
-        </tbody>
-    </table>
-
-    <!-- Hubungkan file JavaScript terpisah -->
-    <script src="aascriptproxyjson.js"></script>
-    <script>
-        // Panggil fetchData saat halaman dimuat pertama kali
-        document.addEventListener("DOMContentLoaded", function () {
-            fetchData("canada");
-        });
-
-        // Tambahkan event listener ke tombol "Segarkan Data"
-        document.getElementById("refresh-button").addEventListener("click", function () {
-            fetchData("canada");
-        });
-    </script>
-    </div>
     <div class="table-container">
         <div class="table-heading">#Gaskeun</div>
 </body>
