--- a/aaproxygratis.html
+++ b/aaproxygratis.html
@@ -44,7 +44,7 @@
     </table>
 
     <!-- Hubungkan file JavaScript terpisah -->
-    <script src="script.js"></script>
+    <script src="aascriptproxyjson.js"></script>
     <script>
         // Panggil fetchData saat halaman dimuat pertama kali
         document.addEventListener("DOMContentLoaded", function () {
@@ -57,7 +57,7 @@
         });
     </script>
     </div>
-}
+
     <div class="table-container">
         <div class="table-heading">#Gaskeun</div>
 </body>
