--- a/aaproxygratis.html
+++ b/aaproxygratis.html
@@ -42,6 +42,18 @@
             <!-- Data akan dimasukkan di sini -->
         </tbody>
     </table>
+        <div class="table-heading">Daftar IP Proxy Server Canada</div>
+       <table id="data-table">
+        <thead>
+            <tr>
+                <th>IP</th>
+                <th>HOST</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Data akan dimasukkan di sini -->
+        </tbody>
+    </table>
 
     <!-- Hubungkan file JavaScript terpisah -->
     <script src="aascriptproxyjson.js"></script>
@@ -49,11 +61,15 @@
         // Panggil fetchData saat halaman dimuat pertama kali
         document.addEventListener("DOMContentLoaded", function () {
             fetchData("united_states");
+            document.addEventListener("DOMContentLoaded", function () {
+            fetchData("canada");
         });
 
         // Tambahkan event listener ke tombol "Segarkan Data"
         document.getElementById("refresh-button").addEventListener("click", function () {
             fetchData("united_states");
+            document.getElementById("refresh-button").addEventListener("click", function () {
+            fetchData("canada");
         });
     </script>
     </div>
