--- a/aaproxygratis.html
+++ b/aaproxygratis.html
@@ -59,6 +59,20 @@
     </script>
     </div>
 
+     <div class="table-container">
+        <div class="table-heading">Daftar IP Proxy Server Canada</div>
+       <table id="data-table">
+        <thead>
+            <tr>
+                <th>IP</th>
+                <th>HOST</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Data akan dimasukkan di sini -->
+        </tbody>
+    </table>
+
     <div class="table-container">
         <div class="table-heading">#Gaskeun</div>
 </body>
