--- a/aaproxygratis.html
+++ b/aaproxygratis.html
@@ -72,6 +72,19 @@
             <!-- Data akan dimasukkan di sini -->
         </tbody>
     </table>
+         <script src="aascriptproxyjson.js"></script>
+    <script>
+        // Panggil fetchData saat halaman dimuat pertama kali
+        document.addEventListener("DOMContentLoaded", function () {
+            fetchData("canada");
+        });
+
+        // Tambahkan event listener ke tombol "Segarkan Data"
+        document.getElementById("refresh-button").addEventListener("click", function () {
+            fetchData("canada");
+           
+        });
+    </script>
 
     <div class="table-container">
         <div class="table-heading">#Gaskeun</div>
