--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="dataproxyall.html">Semua Data Proxy</a></li>
         <li><a href="https://check.dichvusocks.us/" target="_blank">Check Proxy</a></li>
+        <li><a href="aaproxygratis.html">Semua Data Proxy</a></li>
     </ul>
     <h1>Panduan Game Iklan 5 Detik</h1>
     <ul>
