--- a/aaproxygratis.html
+++ b/aaproxygratis.html
@@ -40,6 +40,7 @@
             <thead>
                 <tr>
                     <th>IP</th>
+                    <th>HOST</th>
                 </tr>
             </thead>
             <tbody>
@@ -67,6 +68,7 @@
             <thead>
                 <tr>
                     <th>IP</th>
+                    <th>HOST</th>
                 </tr>
             </thead>
             <tbody>
