--- a/cekcinta.html
+++ b/cekcinta.html
@@ -15,10 +15,6 @@
         .container {
             text-align: center;
         }
-        #hasil {
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
         #judul {
             font-size: 48px;
             margin-bottom: 20px;
@@ -40,6 +36,11 @@
             border-radius: 5px;
             cursor: pointer;
             margin: 10px;
+        }
+        #hasil {
+            font-size: 36px;
+            margin-bottom: 20px;
+            color: #4CAF50;
         }
     </style>
 </head>
