--- a/cekcinta.html
+++ b/cekcinta.html
@@ -20,6 +20,11 @@
             margin-bottom: 20px;
             color: #4CAF50;
         }
+        #tips {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #2196F3;
+        }
         #judul {
             font-size: 48px;
             margin-bottom: 20px;
@@ -42,21 +47,17 @@
             cursor: pointer;
             margin: 10px;
         }
-        #tips {
-            font-size: 24px;
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <p id="hasil"></p>
+        <p id="tips"></p>
         <h1 id="judul">Cek Cinta</h1>
         <input type="text" id="input-nama1" placeholder="Masukkan nama Anda">
         <input type="text" id="input-nama2" placeholder="Masukkan nama pasangan Anda">
         <button id="tombol-cek">Cek Kecocokan Cinta</button>
         <button id="tombol-tips" disabled>Tips dan Saran</button>
-        <p id="tips"></p>
     </div>
     <script>
         const tombolCek = document.getElementById('tombol-cek');
@@ -83,9 +84,16 @@
         });
 
         tombolTips.addEventListener('click', () => {
-            const tipsMessage = "Tips: Jaga komunikasi yang baik dan saling memahami satu sama lain.";
-            tips.textContent = tipsMessage;
-            const utterance = new SpeechSynthesisUtterance(tipsMessage);
+            const tipsMessages = [
+                "Tips: Jaga komunikasi yang baik dan saling memahami satu sama lain.",
+                "Saran: Lakukan kegiatan bersama-sama untuk memperkuat hubungan.",
+                "Tips: Jangan lupa untuk saling menghargai dan memaafkan.",
+                "Saran: Berikan kejutan kecil untuk membuat pasangan Anda bahagia.",
+                "Tips: Jangan terlalu keras pada diri sendiri dan pasangan Anda."
+            ];
+            const randomTipsMessage = tipsMessages[Math.floor(Math.random() * tipsMessages.length)];
+            tips.textContent = randomTipsMessage;
+            const utterance = new SpeechSynthesisUtterance(randomTipsMessage);
             utterance.lang = 'id-ID';
             speechSynthesis.speak(utterance);
         });
