--- a/cekcinta.html
+++ b/cekcinta.html
@@ -2,21 +2,17 @@
 <html>
 <head>
     <title>Cek Cinta</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
+            padding: 0;
         }
         .container {
             text-align: center;
             padding: 20px;
-            max-width: 500px;
-            width: 100%;
         }
         #hasil {
             font-size: 24px;
@@ -54,6 +50,15 @@
         @media only screen and (max-width: 768px) {
             .container {
                 padding: 10px;
+            }
+            #judul {
+                font-size: 24px;
+            }
+            #hasil {
+                font-size: 18px;
+            }
+            #tips {
+                font-size: 16px;
             }
         }
     </style>
