--- a/cekcinta.html
+++ b/cekcinta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cek Cinta</title>
+    <title>Cek Kecocokan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
