--- a/ramalanzodiak.html
+++ b/ramalanzodiak.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,32 +7,30 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
         }
         .container {
             width: 80%;
+            max-width: 600px;
             margin: 40px auto;
             padding: 20px;
+            background-color: #fff;
             border: 1px solid #ddd;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         label {
             display: block;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
-        input[type="text"] {
+        input[type="text"], select {
             width: 100%;
             height: 40px;
             margin-bottom: 20px;
             padding: 10px;
             border: 1px solid #ccc;
-        }
-        select {
-            width: 100%;
-            height: 40px;
-            margin-bottom: 20px;
-            padding: 10px;
-            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
         }
         button {
             width: 100%;
@@ -43,6 +41,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            font-size: 16px;
         }
         button:hover {
             background-color: #3e8e41;
@@ -50,9 +49,9 @@
         #hasil {
             margin-top: 20px;
             padding: 20px;
+            background-color: #f1f1f1;
             border: 1px solid #ddd;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
@@ -78,39 +77,39 @@
                 <option value="sagittarius">Sagittarius</option>
                 <option value="capricorn">Capricorn</option>
             </select>
-            <button id="btn-ramalan">Ramalan</button>
+            <button type="submit" id="btn-ramalan">Ramalan</button>
         </form>
         <div id="hasil"></div>
     </div>
 
     <script>
-const ramalanData = {
-    "aries": "Peruntungan: Jangan pasif, raih peluang! Keuangan: Jalani dulu, hambatan bisa diselesaikan sambil jalan. Asmara: Pasanganmu marah karena janji tak ditepati. Jam Baik: 11.00-12.00",
-    "taurus": "Peruntungan: Tunjukkan bukti, bukan debat! Keuangan: Berani ambil keputusan! Asmara: Beri perhatian, jangan acuh! Jam Baik: 14.00-15.00",
-    "gemini": "Peruntungan: Kesuksesan sudah dekat, atur langkah! Keuangan: Cari cara dapat hasil besar! Asmara: Bersikap hangat, sabar, dan positif! Jam Baik: 14.00-15.00",
-    "cancer": "Peruntungan: Jangan hanya berharap, ambil tindakan! Keuangan: Banyak bergerak, jangan berdiam diri! Asmara: Tetap tenang, hindari pertengkaran! Jam Baik: 11.00-12.00",
-    "leo": "Peruntungan: Kesuksesan terus meningkat, tetap waspada! Keuangan: Waspadai pemborosan! Asmara: Percayakan pada Dia, jangan percaya omongan orang! Jam Baik: 14.00-15.00",
-    "virgo": "Peruntungan: Berhati-hati dalam menyikapi perubahan! Keuangan: Pemasukan mengalir, tapi kebutuhan naik! Asmara: Pertahankan suasana baik, dengarkan dia! Jam Baik: 14.00-15.00",
-    "libra": "Peruntungan: Jangan terburu-buru, pikir dengan teliti! Keuangan: Terima bantuan dengan tangan terbuka! Asmara: Jangan bicara terlalu tinggi di depannya! Jam Baik: 12.00-13.00",
-    "scorpio": "Peruntungan: Lanjutkan rencana yang tertunda, optimis! Keuangan: Fokus pada masa depan, jangan terobsesi masa lalu! Asmara: Berikan nasehat dengan lembut, jadilah sosok menyenangkan! Jam Baik: 13.00-14.00",
-    "sagittarius": "Peruntungan: Bangkit kembali, jangan terus pesimis! Keuangan: Manfaatkan peluang untuk bangkit! Asmara: Terima pandangannya dengan bijak, jangan negatif! Jam Baik: 09.00-10.00",
-    "capricorn": "Peruntungan: Jangan takabur, tetap waspada! Keuangan: Jangan biarkan orang lain untung dari kesalahanmu! Asmara: Hilangkan prasangka buruk, jangan tuduh tanpa bukti! Jam Baik: 15.00-16.00",
-    "aquarius": "Peruntungan: Jalani dengan sewajarnya, jangan memaksakan diri! Keuangan: Pengeluaran masih dalam batas kewajaran! Asmara: Jangan mendramatisir hal biasa, hindari keributan! Jam Baik: 17.00-18.00",
-    "pisces": "Peruntungan: Selesaikan tanggungan, jangan tunda! Keuangan: Kencangkan ikat pinggang, hemat! Asmara: Jangan percaya gosip, jangan ikut memojokkan! Jam Baik: 11.00-12.00"
-};
+    const ramalanData = {
+        "aries": "Peruntungan: Jangan pasif, raih peluang! Keuangan: Jalani dulu, hambatan bisa diselesaikan sambil jalan. Asmara: Pasanganmu marah karena janji tak ditepati. Jam Baik: 11.00-12.00",
+        "taurus": "Peruntungan: Tunjukkan bukti, bukan debat! Keuangan: Berani ambil keputusan! Asmara: Beri perhatian, jangan acuh! Jam Baik: 14.00-15.00",
+        "gemini": "Peruntungan: Kesuksesan sudah dekat, atur langkah! Keuangan: Cari cara dapat hasil besar! Asmara: Bersikap hangat, sabar, dan positif! Jam Baik: 14.00-15.00",
+        "cancer": "Peruntungan: Jangan hanya berharap, ambil tindakan! Keuangan: Banyak bergerak, jangan berdiam diri! Asmara: Tetap tenang, hindari pertengkaran! Jam Baik: 11.00-12.00",
+        "leo": "Peruntungan: Kesuksesan terus meningkat, tetap waspada! Keuangan: Waspadai pemborosan! Asmara: Percayakan pada Dia, jangan percaya omongan orang! Jam Baik: 14.00-15.00",
+        "virgo": "Peruntungan: Berhati-hati dalam menyikapi perubahan! Keuangan: Pemasukan mengalir, tapi kebutuhan naik! Asmara: Pertahankan suasana baik, dengarkan dia! Jam Baik: 14.00-15.00",
+        "libra": "Peruntungan: Jangan terburu-buru, pikir dengan teliti! Keuangan: Terima bantuan dengan tangan terbuka! Asmara: Jangan bicara terlalu tinggi di depannya! Jam Baik: 12.00-13.00",
+        "scorpio": "Peruntungan: Lanjutkan rencana yang tertunda, optimis! Keuangan: Fokus pada masa depan, jangan terobsesi masa lalu! Asmara: Berikan nasehat dengan lembut, jadilah sosok menyenangkan! Jam Baik: 13.00-14.00",
+        "sagittarius": "Peruntungan: Bangkit kembali, jangan terus pesimis! Keuangan: Manfaatkan peluang untuk bangkit! Asmara: Terima pandangannya dengan bijak, jangan negatif! Jam Baik: 09.00-10.00",
+        "capricorn": "Peruntungan: Jangan takabur, tetap waspada! Keuangan: Jangan biarkan orang lain untung dari kesalahanmu! Asmara: Hilangkan prasangka buruk, jangan tuduh tanpa bukti! Jam Baik: 15.00-16.00",
+        "aquarius": "Peruntungan: Jalani dengan sewajarnya, jangan memaksakan diri! Keuangan: Pengeluaran masih dalam batas kewajaran! Asmara: Jangan mendramatisir hal biasa, hindari keributan! Jam Baik: 17.00-18.00",
+        "pisces": "Peruntungan: Selesaikan tanggungan, jangan tunda! Keuangan: Kencangkan ikat pinggang, hemat! Asmara: Jangan percaya gosip, jangan ikut memojokkan! Jam Baik: 11.00-12.00"
+    };
 
-const formRamalan = document.getElementById('form-ramalan');
-const btnRamalan = document.getElementById('btn-ramalan');
-const hasil = document.getElementById('hasil');
+    document.getElementById('form-ramalan').addEventListener('submit', function (e) {
+        e.preventDefault();
+        const nama = document.getElementById('nama').value.trim();
+        const horoskop = document.getElementById('horoskop').value;
+        const ramalan = ramalanData[horoskop];
 
-btnRamalan.addEventListener('click', (e) => {
-    e.preventDefault();
-    const nama = document.getElementById('nama').value;
-    const horoskop = document.getElementById('horoskop').value;
-    const ramalan = ramalanData[horoskop];
-    if (ramalan) {
-        hasil.innerHTML = `Halo ${nama}, ramalan horoskop Anda hari ini adalah: <br><br>${ramalan}`;
-    } else {
-        hasil.innerHTML = `Maaf, ramalan horoskop tidak tersedia untuk ${horoskop}`;
-    }
-});
+        if (ramalan && nama !== "") {
+            document.getElementById('hasil').innerHTML = `Halo <strong>${nama}</strong>, ramalan horoskop Anda hari ini adalah:<br><br>${ramalan}`;
+        } else {
+            document.getElementById('hasil').innerHTML = `Mohon lengkapi semua data dengan benar.`;
+        }
+    });
+    </script>
+</body>
+</html>
